--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-transform-hmr": "^1.0.4",
+    "redux": "^3.7.2",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.1",
     "url-loader": "^0.5.7",
