--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.3",
     "expose-loader": "^0.7.3",
     "express": "^4.14.0",
