--- a/package.json
+++ b/package.json
@@ -41,6 +41,12 @@
     "draft-js": "^0.10.1",
     "file-loader": "^0.11.2",
     "jquery": "^3.2.1",
+    "koa": "^2.3.0",
+    "koa-body": "^2.3.0",
+    "koa-route": "^3.2.0",
+    "koa-static": "^4.0.1",
+    "mysql2": "^1.4.1",
+    "sequelize": "^4.5.0",
     "simditor": "^2.3.6",
     "snapsvg": "^0.5.1",
     "url-loader": "^0.5.9"
