--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "koa-route": "^3.2.0",
     "koa-static": "^4.0.1",
     "mysql2": "^1.4.1",
+    "mysqldump": "^1.4.2",
     "sequelize": "^4.5.0",
     "simditor": "^2.3.6",
     "snapsvg": "^0.5.1",
