--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expose-loader": "^0.7.3",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.4",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^4.5.3",
     "open-browser-webpack-plugin": "^0.0.5",
@@ -43,11 +44,13 @@
     "jquery": "^3.2.1",
     "koa": "^2.3.0",
     "koa-body": "^2.3.0",
+    "koa-cors": "^0.0.16",
     "koa-route": "^3.2.0",
     "koa-static": "^4.0.1",
     "mysql2": "^1.4.1",
     "mysqldump": "^1.4.2",
     "pn": "^1.0.0",
+    "redux-thunk": "^2.2.0",
     "sequelize": "^4.5.0",
     "simditor": "^2.3.6",
     "snapsvg": "^0.5.1",
