--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "draft-js": "^0.10.1",
     "fetch-stringify": "^1.0.2",
     "file-loader": "^0.11.2",
+    "history": "^4.7.2",
     "jquery": "^3.2.1",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
@@ -53,6 +54,7 @@
     "mysql2": "^1.4.1",
     "mysqldump": "^1.4.2",
     "pn": "^1.0.0",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.5.0",
     "simditor": "^2.3.6",
