--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "pn": "^1.0.0",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux-thunk": "^2.2.0",
+    "remarkable": "^1.7.1",
     "sequelize": "^4.5.0",
     "simditor": "^2.3.6",
     "snapsvg": "^0.5.1",
