--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
   },
   "dependencies": {
     "antd": "^2.10.2",
+    "bootstrap": "^3.3.7",
     "draft-js": "^0.10.1",
     "fetch-stringify": "^1.0.2",
     "file-loader": "^0.11.2",
+    "highlight.js": "^9.12.0",
     "history": "^4.7.2",
     "jquery": "^3.2.1",
     "koa": "^2.3.0",
