--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "webpack.config.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack-dev-server --port 8888 --hot --colors --inline"
+        "start": "webpack-dev-server --port 8888 --hot --colors --inline",
+        "build": "webpack"
     },
     "author": "wangcaowei",
     "license": "ISC",
