--- a/package.json
+++ b/package.json
@@ -1,67 +1,68 @@
 {
-    "name": "blog",
-    "version": "1.0.0",
-    "description": "personal project",
-    "main": "webpack.config.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack-dev-server --port 8888 --hot --colors --inline",
-        "build": "webpack"
-    },
-    "author": "wangcaowei",
-    "license": "ISC",
-    "devDependencies": {
-        "babel-core": "^6.22.1",
-        "babel-loader": "^6.2.10",
-        "babel-plugin-react-transform": "^2.0.2",
-        "babel-preset-es2015": "^6.22.0",
-        "babel-preset-react": "^6.22.0",
-        "babel-preset-stage-0": "^6.24.1",
-        "css-loader": "^0.28.3",
-        "expose-loader": "^0.7.3",
-        "express": "^4.14.0",
-        "html-webpack-plugin": "^2.28.0",
-        "http-proxy-middleware": "^0.17.4",
-        "node-libs-browser": "^1.0.0",
-        "node-sass": "^4.5.3",
-        "open-browser-webpack-plugin": "^0.0.5",
-        "react": "^15.4.2",
-        "react-dom": "^15.4.2",
-        "react-hot-loader": "^1.3.1",
-        "react-redux": "^5.0.5",
-        "react-router-dom": "^4.1.1",
-        "react-transform-hmr": "^1.0.4",
-        "redux": "^3.7.2",
-        "sass-loader": "^6.0.5",
-        "style-loader": "^0.18.1",
-        "url-loader": "^0.5.7",
-        "webpack": "^2.5.1",
-        "webpack-dev-server": "^2.4.5"
-    },
-    "dependencies": {
-        "antd": "^2.10.2",
-        "bootstrap": "^3.3.7",
-        "fetch-stringify": "^1.0.2",
-        "file-loader": "^0.11.2",
-        "highlight.js": "^9.12.0",
-        "history": "^4.7.2",
-        "jquery": "^3.2.1",
-        "koa": "^2.3.0",
-        "koa-bodyparser": "^4.2.0",
-        "koa-cors": "^0.0.16",
-        "koa-route": "^3.2.0",
-        "koa-router": "^7.2.1",
-        "koa-session2": "^2.2.4",
-        "koa-static": "^4.0.1",
-        "mysql2": "^1.4.1",
-        "mysqldump": "^1.4.2",
-        "pn": "^1.0.0",
-        "react-router-redux": "^5.0.0-alpha.6",
-        "redux-thunk": "^2.2.0",
-        "remarkable": "^1.7.1",
-        "sequelize": "^4.5.0",
-        "simditor": "^2.3.6",
-        "snapsvg": "^0.5.1",
-        "url-loader": "^0.5.9"
-    }
+  "name": "blog",
+  "version": "1.0.0",
+  "description": "personal project",
+  "main": "webpack.config.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --port 8888 --hot --colors --inline",
+    "build": "webpack"
+  },
+  "author": "wangcaowei",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.3",
+    "expose-loader": "^0.7.3",
+    "express": "^4.14.0",
+    "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.4",
+    "node-libs-browser": "^1.0.0",
+    "node-sass": "^4.5.3",
+    "open-browser-webpack-plugin": "^0.0.5",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "react-transform-hmr": "^1.0.4",
+    "redux": "^3.7.2",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "antd": "^2.10.2",
+    "bootstrap": "^3.3.7",
+    "clamp-js-main": "^0.11.4",
+    "fetch-stringify": "^1.0.2",
+    "file-loader": "^0.11.2",
+    "highlight.js": "^9.12.0",
+    "history": "^4.7.2",
+    "jquery": "^3.2.1",
+    "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-cors": "^0.0.16",
+    "koa-route": "^3.2.0",
+    "koa-router": "^7.2.1",
+    "koa-session2": "^2.2.4",
+    "koa-static": "^4.0.1",
+    "mysql2": "^1.4.1",
+    "mysqldump": "^1.4.2",
+    "pn": "^1.0.0",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "redux-thunk": "^2.2.0",
+    "remarkable": "^1.7.1",
+    "sequelize": "^4.5.0",
+    "simditor": "^2.3.6",
+    "snapsvg": "^0.5.1",
+    "url-loader": "^0.5.9"
+  }
 }
