--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --port 8888 --hot --colors --inline",
-    "build": "webpack"
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "author": "wangcaowei",
   "license": "ISC",
@@ -17,11 +17,13 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.24.1",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.3",
     "expose-loader": "^0.7.3",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
+    "imagemin-webpack-plugin": "^1.5.2",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^4.5.3",
     "open-browser-webpack-plugin": "^0.0.5",
@@ -54,6 +56,7 @@
     "koa-static": "^4.0.1",
     "mysql2": "^1.4.1",
     "mysqldump": "^1.4.2",
+    "node-ip": "^0.1.2",
     "pn": "^1.0.0",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux-thunk": "^2.2.0",
