--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.3",
-    "expose-loader": "^0.7.3",
-    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.4",
     "imagemin-webpack-plugin": "^1.5.2",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^4.5.3",
@@ -42,7 +41,7 @@
   },
   "dependencies": {
     "antd": "^2.10.2",
-    "bootstrap": "^3.3.7",
+    "babel-runtime": "^6.26.0",
     "fetch-stringify": "^1.0.2",
     "file-loader": "^0.11.2",
     "highlight.js": "^9.12.0",
