--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
         "regenerator": true,
         "moduleName": "babel-runtime"
       }
-    ]
+    ],
+    ["import", { "libraryName": "antd", "style": "css" }]
   ]
 }
