--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --port 8888 --hot --colors --inline",
-    "build": "cross-env webpack --progress"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --port 8888 --hot --colors --inline",
+    "build": "cross-env NODE_ENV=production webpack --progress"
   },
   "author": "wangcaowei",
   "license": "ISC",
