--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-  "name": "blog",
-  "version": "1.0.0",
-  "description": "personal project",
-  "main": "webpack.config.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --port 8888 --hot --colors --inline",
-    "build": "cross-env NODE_ENV=production webpack --progress"
-  },
-  "author": "wangcaowei",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-import": "^1.6.2",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^5.1.1",
-    "css-loader": "^0.28.3",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "html-webpack-plugin": "^2.28.0",
-    "imagemin-webpack-plugin": "^1.5.2",
-    "node-libs-browser": "^1.0.0",
-    "node-sass": "^4.5.3",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-hot-loader": "^1.3.1",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
-    "react-transform-hmr": "^1.0.4",
-    "redux": "^3.7.2",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.18.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5"
-  },
-  "dependencies": {
-    "antd": "^3.2.0",
-    "babel-runtime": "^6.26.0",
-    "fetch-stringify": "^1.0.2",
-    "file-loader": "^0.11.2",
-    "highlight.js": "^9.12.0",
-    "history": "^4.7.2",
-    "react-router-redux": "^5.0.0-alpha.6",
-    "redux-thunk": "^2.2.0",
-    "remarkable": "^1.7.1",
-    "url-loader": "^0.5.9"
-  }
+    "name": "blog",
+    "version": "1.0.0",
+    "description": "personal project",
+    "main": "webpack.config.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "cross-env NODE_ENV=development webpack-dev-server --port 8888 --hot --colors --inline && webpack --progress --hide-modules",
+        "build": "cross-env NODE_ENV=production webpack --progress"
+    },
+    "author": "wangcaowei",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-core": "^6.22.1",
+        "babel-loader": "^6.2.10",
+        "babel-plugin-import": "^1.6.2",
+        "babel-plugin-react-transform": "^2.0.2",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-preset-es2015": "^6.22.0",
+        "babel-preset-react": "^6.22.0",
+        "babel-preset-stage-0": "^6.24.1",
+        "cross-env": "^5.1.1",
+        "css-loader": "^0.28.3",
+        "extract-text-webpack-plugin": "^2.0.0-beta.4",
+        "html-webpack-plugin": "^2.28.0",
+        "imagemin-webpack-plugin": "^1.5.2",
+        "node-libs-browser": "^1.0.0",
+        "node-sass": "^4.5.3",
+        "react": "^15.4.2",
+        "react-dom": "^15.4.2",
+        "react-hot-loader": "^1.3.1",
+        "react-redux": "^5.0.5",
+        "react-router-dom": "^4.1.1",
+        "react-transform-hmr": "^1.0.4",
+        "redux": "^3.7.2",
+        "sass-loader": "^6.0.5",
+        "style-loader": "^0.18.1",
+        "url-loader": "^0.5.7",
+        "webpack": "^2.5.1",
+        "webpack-dev-server": "^2.4.5"
+    },
+    "dependencies": {
+        "antd": "^3.2.0",
+        "babel-runtime": "^6.26.0",
+        "fetch-stringify": "^1.0.2",
+        "file-loader": "^0.11.2",
+        "highlight.js": "^9.12.0",
+        "history": "^4.7.2",
+        "react-router-redux": "^5.0.0-alpha.6",
+        "redux-thunk": "^2.2.0",
+        "remarkable": "^1.7.1",
+        "url-loader": "^0.5.9"
+    }
 }
