--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "koa-router": "^7.2.1",
     "koa-session2": "^2.2.4",
     "koa-static": "^4.0.1",
+    "log4js": "^2.5.3",
     "mysql2": "^1.4.1",
     "pn": "^1.0.0",
     "sequelize": "^4.5.0"
