--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "jwt-simple": "^0.5.1"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-cors": "^0.0.16",
