--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "log4js": "^2.5.3",
     "mysql2": "^1.4.1",
     "pn": "^1.0.0",
-    "sequelize": "^4.5.0"
+    "sequelize": "^4.5.0",
+    "svg-captcha": "^1.3.11"
   }
 }
