--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-cors": "^0.0.16",
+    "koa-jwt": "^3.3.0",
     "koa-route": "^3.2.0",
     "koa-router": "^7.2.1",
     "koa-session2": "^2.2.4",
