--- a/server/package.json
+++ b/server/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "blog",
-  "version": "1.0.0",
-  "description": "personal project",
-  "main": "webpack.config.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --port 8888 --hot --colors --inline",
-    "build": "cross-env NODE_ENV=production webpack --progress"
-  },
-  "author": "wangcaowei",
-  "license": "ISC",
-  "devDependencies": {
-    "jwt-simple": "^0.5.1"
-  },
-  "dependencies": {
-    "bcrypt": "^1.0.3",
-    "jsonwebtoken": "^8.2.0",
-    "koa": "^2.3.0",
-    "koa-bodyparser": "^4.2.0",
-    "koa-cors": "^0.0.16",
-    "koa-jwt": "^3.3.0",
-    "koa-route": "^3.2.0",
-    "koa-router": "^7.2.1",
-    "koa-session2": "^2.2.4",
-    "koa-static": "^4.0.1",
-    "log4js": "^2.5.3",
-    "mysql2": "^1.4.1",
-    "pn": "^1.0.0",
-    "sequelize": "^4.5.0",
-    "svg-captcha": "^1.3.11"
-  }
+    "name": "blog",
+    "version": "1.0.0",
+    "description": "personal project",
+    "main": "webpack.config.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "cross-env NODE_ENV=development webpack-dev-server --port 8888 --hot --colors --inline",
+        "build": "cross-env NODE_ENV=production webpack --progress"
+    },
+    "author": "wangcaowei",
+    "license": "ISC",
+    "devDependencies": {
+        "jwt-simple": "^0.5.1"
+    },
+    "dependencies": {
+        "bcrypt": "^1.0.3",
+        "jsonwebtoken": "^8.2.0",
+        "koa": "^2.3.0",
+        "koa-bodyparser": "^4.2.0",
+        "koa-cors": "^0.0.16",
+        "koa-jwt": "^3.3.0",
+        "koa-route": "^3.2.0",
+        "koa-router": "^7.2.1",
+        "koa-session": "^5.8.1",
+        "koa-static": "^4.0.1",
+        "log4js": "^2.5.3",
+        "mysql2": "^1.4.1",
+        "pn": "^1.0.0",
+        "sequelize": "^4.5.0",
+        "svg-captcha": "^1.3.11"
+    }
 }
